--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bufferutil": "^4.0.2",
     "express": "^4.17.1",
+    "mongoose": "^5.11.10",
     "utf-8-validate": "^5.0.3",
     "ws": "^7.4.2"
   }
