--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.4.5",
     "utf-8-validate": "^5.0.3",
-    "ws": "^7.5.9"
+    "ws": "^7.5.9",
+    "path": "^0.12.7"
   }
 }
